# DeepResidueCluster

./: .gitignore  README.md  pyproject.toml
analysis/: Analysis.ipynb  analysis.py  enrich.py  runImportantPath.py  sbatch_clustering.sh  vizualization.py
analysis/Enrichment/: sbatch_permutation.sh
config/: Classifier.yaml  DGI.yaml  GAT_clf.yaml  SAGE_clf.yaml  pchk.yaml  proposed.yaml  run.yaml  uniprot-id_to_index.json
config/mapping/: dssp_helix_3_10_mapping.json  dssp_helix_alpha_mapping.json  dssp_helix_pi_mapping.json  dssp_helix_pp_mapping.json  dssp_ladder_1_mapping.json  dssp_ladder_2_mapping.json  dssp_sec_struct_mapping.json  dssp_sheet_mapping.json  dssp_strand_mapping.json  mut+res-bin_mapping.json  uniprot-id_to_index.json
data/: Augmentation.py  DriverGenerater.py  EDA.ipynb  pairGenerator.py  process.py
data/ExtractAtt/: Calculator.py  attProcessing.sh  centralityConfig.py  evol_info.py  run.py  utils.py
models/DGI/: execute.py
models/DGI/data/: process.py
models/DGI/layers/: gcn.py
models/DGI/models/: dgi.py
models/DGI/utils/: graph_utils.py
preprocessing/: CDSLoader.py  EDA.ipynb  GraphGenerator.ipynb  GraphGenerator.py  process.py  runCDS.py
preprocessing/ExtractAtt/: Calculator.py  attProcessing.sh  utils.py
preprocessing/reference/: __init__.py
script/: debug.sh  downstream.py  runData.py  sbatch.sh  sbatch_evol.sh  train.py
scripts/: DataGen.sh  clustering.sh  debug.sh  runData.py  sbatch_evol.sh  train.py
src/data/: datamodule.py  datasets.py  transforms.py
src/models/Clustering/: CDBN.py  DBSCAN.py  DPClus.py  EAGLE.py  MCL.py  config.py  runCluster.py
src/models/Partitioning/: partition.py  runPartition.py
src/utils/: functions.py  graph_ops.py  logger.py  sub_ops.py
utils/: activation.py  functions.py  graph_utils.py  table_utils.py
(+2 files in other folders)
