[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepResidueCluster"
version = "0.1.0"
description = "Deep Learning for Residue Clustering"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torch-geometric",
    "pandas",
    "networkx",
    "pyyaml",
    "wandb",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "utils*", "models*"]
