[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepResidueCluster"
version = "0.1.0"
description = "Deep Residue Network"
requires-python = ">=3.11"
dependencies = [
    "torch==2.7.1",
    "torch-geometric==2.7.0",
    "pyg_lib",
    "torch-scatter",
    "torch-sparse",
    "torch-cluster",
    "torch-spline-conv",
    "networkx==3.5",
    "pandas",
    "numpy",
    "scipy",
    "pyyaml",
    "wandb==0.24.0",
    "scikit-learn",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "utils*", "models*"]
