[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepResidueCluster"
version = "0.1.0"
description = "Deep Residue Network"
requires-python = ">=3.11"
dependencies = [
    "torch==2.7.1",
    "torch-geometric==2.7.0",
    "pyg_lib==0.5.0+pt27cu126",
    "torch-sparse==0.6.18+torch27.computecanada",
    "torch-scatter==2.1.2+torch27.computecanada",
    "networkx==3.5",
    "pandas",
    "numpy",
    "scipy",
    "pyyaml",
    "wandb==0.24.0",
    "scikit-learn",
    "matplotlib",
    "statsmodels",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "utils*", "models*"]